<resources>
    <string name="app_name">TankApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">RENDSZÁM</string>
    <string name="nav_header_subtitle">AA-AA-123</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_car">Járművek</string>
    <string name="menu_gas_station">Tankolások</string>
    <string name="menu_chart">Statisztikák</string>
    <string name="menu_import_export">Import/Export</string>

    <string name="menu_add_fuel">Új tankolás</string>

    <string name="uj_tankolas_cim">Új tankolás rögzítése</string>
    <string name="jelenlegi_auto_szoveg">jelű járműhöz</string>
    <string name="datum_cim">Tankolás időpontja:</string>
    <string name="datum_kivalsztas_szoveg">Adja meg a tankolás időpontját</string>
    <string name="datum_kivalsztas_figyelmeztetes">A dátum megadásánál hiba lépett fel!</string>
    <string name="ut_cim">Megtett út:</string>
    <string name="tavolsag_pelda">pl: 124</string>
    <string name="mertekegyseg">Mértékegység:</string>
    <string name="ut_megadas_figyelmeztetes">Adja meg a legutóbbi tankolás óta megtett távolságot</string>
    <string name="uzemanyag_tipus_cim">Üzemanyag típusa:</string>
    <string name="uzemanyag_mennyiseg_cim">Üzemanyag mennyisége:</string>
    <string name="uzemanyag_mennyiseg_pelda">pl: 10,5</string>
    <string name="mennyiseg_megadas_figyelmeztetes">Az üzmeanyag mennyiség megadásánál hiba lépett fel!</string>
    <string name="uzemanyag_egysegar_cim">Üzemanyag egységára:</string>
    <string name="penznem_cim">Pénznem:</string>
    <string name="uzemanyag_megadas_pelda">pl: 680,5</string>
    <string name="egysegar_megadas_figyelmeztetes">Az üzmeanyag egyégár megadásánál hiba lépett fel!</string>
    <string name="uzemanyag_mertekegyseg">/ liter</string>
    <string name="tankolas_mentes_szoveg">Tankolás mentése</string>
    <string name="jarmu_hozzaadas_szoveg">Új jármű hozzáadása</string>
    <string name="rendszam_cim">A jármű rendszáma :</string>
    <string name="rendszam_megadas_figyelmeztetes">A rendszám legyen legalább 7 karakter!</string>
    <string name="rendszam_megadas_pelda">pl: AAA-000</string>
    <string name="jarmu_nev_cim">A jármű elnevezése (becenév, stb...) :</string>
    <string name="jarmu_elnevezes_figyelmeztetes">A jármű elnevezésénél hiba lépett fel!</string>
    <string name="jarmu_nev_megadas_pelda">pl: Tűzmadár</string>
    <string name="jarmu_mentes_szoveg">Jármű mentése</string>
    <string name="jarmuvek_cim">Járművek listája</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home_page">Kezdőlap</string>
    <string name="current_vehicle">Jelenlegi jármű: HUN-894</string>

    <string name="load_previously_saved">Korábban mentett adatok betöltése</string>
    <string name="make_import">Importálás</string>
    <string name="save_current_data">Jelenlegi adatbank mentése</string>
    <string name="make_export">Exportálás</string>
    <string name="delete_current_data">Jelenlegi adatbank törlése</string>
    <string name="delete">Törlés</string>


    <string name="refueling_in_current_data">Összes tankolás a kiválasztott járművel</string>
    <string name="date_text">Dátum</string>
    <string name="distance_text">Megtett táv</string>
    <string name="unit_price_text">Egységár</string>
    <string name="fuel_amount_text">Menny.</string>
    <string name="fuel_type_text">Üzemanyag</string>
    <string name="legutobbi_tankolas">Legutóbbi tankolás:</string>
    <string name="atlagfogyasztas">Átlagfogyasztás</string>
    <string name="atlag_fogyasztas">Átlagfogyasztás:</string>
    <string name="osszes_megtett_ut">Összes megtett út:</string>
    <string name="eltelt_ido">Idő</string>
    <string name="uzemanyag_mennyiseg">Liter</string>
    <string name="uzemanyag_tipus">Benzin</string>
    <string name="uzemanyag_ar">Üzemanyag ár</string>
    <string name="km_utan">Km után</string>
    <string name="atlag_fogyasztas_text">l/km</string>
    <string name="osszes_megtett_ut_text">Km</string>

    <string name="statisztika_cim">Statisztika</string>
    <string name="heti_opcio">Heti bontás</string>
    <string name="havi_opcio">Havi bontás</string>

    <string name="atlag_fogyasztas_kiiras">Átlagfogyasztás:</string>
    <string name="havi_tankolasok_szama_atlag">Havonta átlagosan ennyiszer tankolok:</string>
    <string name="egy_tankolas_mennyire_eleg">Egy tankolás átlagosan ennyire elég:</string>
    <string name="tankolasok_havi_bontas_title">Tankolások száma havonta</string>
    <string name="tankolasok_heti_bontas_title">Tankolások száma hetente</string>
    <string name="no_refueling_yet_hint">Majd itt jelennek meg az utolsó tankolás adatai és néhány statisztika.\nA kiválasztott járműhöz még\nnem tartozik tankolás.\nFelvehet egyet a jobb felső gombbal.</string>
    <string name="no_refueling_yet_hint_stat">Majd itt jelennek meg\na kiválasztott járműre vonatkozó statisztikák.\nMég nem rögzített tankolást\na kiválasztott járműhöz.\nA Kezdőlap, illetve a Tankolások\noldalakon keresztül vehet fel egyet.</string>
    <string name="no_refueling_yet_hint_tankolasok">Majd itt jelenik meg a kiválasztott jármű\nösszes tankolásának minden adata.\nMég nem rögzített tankolást\na kiválasztott járműhöz.\nFelvehet egyet a jobb felső gombbal.</string>
    <string name="no_vehicle_yet_hint">A kezdéshez vegyen fel\negy járművet az adatbankba.\nEzt az alsó sávra koppintva teheti meg.\nKorábban mentett adatbázist pedig az Import/Export oldalon tölthet be.</string>
    <string name="unsaved_db_hint">A jelenlegi adatbázis nincs mentve, így ha importál egy másikat, jelenlegi adatai elvesznek. Az adatbázis mentéséhez válassza az Exportálás lehetőséget.</string>
    <string name="saved_db_hint">Mentett adatbázis van megnyitva:</string>
    <string name="already_exported">Exportálva</string>

</resources>