<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_kezdo"
            android:icon="@drawable/baseline_home_24"
            android:iconTint="@android:color/white"
            android:title="Kezdőlap" />
        <item
            android:id="@+id/nav_tankolasok"
            android:icon="@drawable/ic_menu_gas_station"
            android:iconTint="@android:color/white"
            android:title="@string/menu_gas_station" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_menu_chart"
            android:title="@string/menu_chart" />

        <item
            android:id="@+id/nav_jarmuvek"
            android:icon="@drawable/ic_menu_car"
            android:iconTint="@android:color/white"
            android:title="@string/menu_car" />
        <item
            android:id="@+id/nav_importExport"
            android:icon="@drawable/ic_menu_import_export"
            android:title="@string/menu_import_export" />
    </group>
</menu>