<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    tools:context=".ui.jarmu_felvetel.JarmuFelvetelFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@color/mainTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/mainTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/jarmu_hozzaadas_szoveg"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/numberPlateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/rendszam_cim"
                android:textColor="@color/black2"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mainTitle" />

            <TextView
                android:id="@+id/numberPlateAlertText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/rendszam_megadas_figyelmeztetes"
                android:textColor="@color/alert"
                android:textSize="12sp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/numberPlateTitle"
                app:layout_constraintTop_toBottomOf="@+id/numberPlateTitle" />


            <EditText
                android:id="@+id/numberPlateInputField"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:autofillHints="10"
                android:background="@drawable/input_field"
                android:hint="@string/rendszam_megadas_pelda"
                android:inputType="text"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/black2"
                android:textColorHint="@color/grey_hint_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/numberPlateTitle"
                app:layout_constraintTop_toBottomOf="@+id/numberPlateAlertText" />

            <TextView
                android:id="@+id/carNameTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/jarmu_nev_cim"
                android:textColor="@color/black2"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/numberPlateTitle"
                app:layout_constraintTop_toBottomOf="@+id/numberPlateInputField" />

            <TextView
                android:id="@+id/carNameAlertText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/jarmu_elnevezes_figyelmeztetes"
                android:textColor="@color/alert"
                android:textSize="12sp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/carNameTitle"
                app:layout_constraintTop_toBottomOf="@+id/carNameTitle" />


            <EditText
                android:id="@+id/carNameInputField"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:autofillHints="10"
                android:background="@drawable/input_field"
                android:hint="@string/jarmu_nev_megadas_pelda"
                android:inputType="text"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/black2"
                android:textColorHint="@color/grey_hint_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/carNameTitle"
                app:layout_constraintTop_toBottomOf="@+id/carNameAlertText" />

            <Button
                android:id="@+id/saveVehicleButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:backgroundTint="@color/background"
                android:text="@string/jarmu_mentes_szoveg"
                android:textColor="@color/white2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/carNameInputField" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>